<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background Image</string>
    <string name="go_all_in">go all in</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_the_team_in_your_city_and_dominate_the_league">Find The Team In Your City And Dominate The League</string>
    <string name="logo">logo</string>
    <string name="get_started">GET STARTED</string>
    <string name="co_ed">CO-ED</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="desired_league">DESIRED LEAGUE:</string>
    <string name="i_am_a">I Am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">Finish</string>
    <string name="select_age_prefrence">Select Age Prefrence</string>
    <string name="children">Children</string>
    <string name="adult">Adult</string>
    <string name="next">Next</string>
</resources>